# muadib

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: buffers.rs  device_info.rs  ffs.rs  forward.rs  main.rs  message.rs  shell.rs  stream.rs  sync.rs  usb.rs
systemd/: adibi-gadget.service  adibi-udc.service  adibi.service  adibi.socket  muadib-gadget.service  muadib-udc.service  muadib.service  muadib.socket  run-adibi-ffs.mount  run-muadib-ffs.mount
tmt/plans/: adb.fmf
tmt/tests/adb/forward/: main.fmf  test.sh
tmt/tests/adb/pull/: main.fmf  test.sh
tmt/tests/adb/push/: main.fmf  test.sh
tmt/tests/adb/shell/: main.fmf  test.sh
